--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,6 @@ Current
 =======
 
  - Get functionality working:
-   - svg
    - exposer
    - player
 
@@ -23,6 +22,7 @@ Current
 
  - E: Optimize setContent? (not re-populate all children?)
  - E: dereg listener on drop? [needed?]
+ - E: $ns -> $attr:{ xmlns=... }
  - Validate "clean" install using "npm update"
 
 
@@ -31,9 +31,8 @@ For readme...
 
  * `$ npm update` installs dependencies.
 
- * FOO_q.js = test for FOO.js
-   FOO_demo.js = interactive demo/text for FOO.js, viewable with
-      `make 'Demo(FOO_demo.js)`
+ * FOO_q.js => test for FOO.js
+   FOO_demo.js => interactive demo/test for FOO.js; view with `make index`
 
  * Javascript sources are ES "modules", and should be directly usable,
    as-is, by a browser or Node.js.  This implies:
