--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,16 @@
 Current
 =======
 
- - I: always intern values used in equality tests? (wrapped fn args &
-      cell results) reduce confusion; ensure semantics more like "IFL"
+ - incremental.md  <--  *.{txt,md}
+   - "Liveness and Lifetimes"        <-- LivenessGC/ReactiveGC
+ - rop.js: Open -> Call; Update -> Result; Close -> Drop
+ - rop.js: use new serialization described in rop.md
+ - rop.js: pass thunks & use remotely
+ - do not kill server when WS client disconnects
+ - rop.js: protect against malicious peers
+ - use button in browser(s) to increment the counter
+ - rop: on shutdown, close observers
+ - I: deal with leaks (see below)
  - grid: repeating background?
  - grid: demo vertical & horizontal scrolling
  - drag: leverage `listen` from e.js?
@@ -20,6 +28,8 @@ For README...
  * `$ npm update` installs dependencies, except github.com/bhk/minion,
    which is expected at `./minion`.
 
+ * Debug with:  $ node --inspect-brk  &&  chrome:://inspect
+
  * FOO_q.js => test for FOO.js
    FOO_demo.js => interactive demo/test for FOO.js; view with `make index`
 
@@ -35,6 +45,37 @@ For README...
 
  * `./test.js` is remapped to `./no-test.js` when bulding bundles for the
    browser.  With minification, this also discards embedded unit tests.
+
+
+"Leaks" in i.js
+====
+
+   Cell (object) Lifetime vs. Cell (node) Liveness
+
+   A cell is often constructed and used in different cells.  When
+   constructed, it represents a *potential* node in the dependency graph.
+   Only when and where it is later *used* does it become a "live" node in
+   the graph.  Once deactivated it returns to being a potential node, and it
+   could be activated again.  A live cell will have one or more outputs
+   (cells that use it), a result value, and a known set of inputs.
+
+   At present, each memoized cell remembers its own key, and when it is
+   deactivated, it removes itself from the cache, allowing it to be
+   collected.  This is not an ideal way of doing this, because (a) it
+   remains in memory and could be re-activated, and (b) the memo cache is
+   global, so some cell other than its original creator might obtain a
+   different cell instead of the extant matching one, leaving us with two
+   "twins".  [This would still conforms to a more conservative
+   using-cell-scoped memoization guarantee, but by allowing greater scope
+   this allows for some indeterminacy.]
+
+   Ultimately, cell memoization should be done via ordinary memoization, and
+   cleaned up with onDrop handlers and reference counting, so that it will
+   remain in memory while *any* of its creator cells remain.
+
+   Also, interned values should be recovered in the same way.  intern.js
+   should implement the refcounting, but not depend on i.js.  i.js should
+   re-export the leak-free versions.
 
 
 Longer-term
